Changelog
=========


2.0.5 (unreleased)
------------------

- Activate tabbedview quickupload plugin for dossiers.
  Issue #549 Abklaerung: Drag and drop
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/549
  [phgross]

- Adjust tests, because the accessors return utf-8 since the dexerity update.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

- User get_css_class instead of deprecated method: css_class_from_obj/css_class_from_brain
  [eschmutz]

- Add ordering for the contentmenu for dossiers and subdossiers
  [eschmutz]


2.0.4 (2012-03-28)
------------------

- Added filing number maintance view, wich provide some scripts and forms
  to maintain the different counters.
  [phgross]

- Change translations
  [ttschanz]


2.0.3 (2012-02-27)
------------------

- Added parent-dossier-finder adapter.
  [jone]

- Made view failsafe when there is no orig_template
  Issue #1398 DossierReporter: Fallback implementieren fuer MissingValues
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1398/
  [phgross]

- Added French translations.
  [ttschanz]

- Administrator role now may resolve or reactivate dossiers
  [lgraf]

- When resolving dossiers, only issue filing numbers for active dossiers
  [lgraf]

- Fixed tests: Unregister prevent_deletion subscriber in tests
  [lgraf]

- Removed 'List folder contents' permission from anyone but Manager in
  dossier and templatedossier workflows.
  [lgraf]

- Updated workflow for new Administrator role
  [lgraf]

- Dossier resolving: Only require tasks and docs to be filed in a
  subdossier if there's any *active* subdossiers.
  [lgraf]

- Adjust the main dossier test: added IDisplayInOverview functionality test.
  [phgross]

- Adjust the containing_dossier indexer: it should also work for objects in the inbox.
  [phgross]
