@@ -5,6 +5,11 @@ Changelog
 2.0.5 (unreleased)
 ------------------
 
+- Added filingnumber and -year columns to the xls dossier reporter.
+  Issue #1512 Auswahl exportieren: Sortieren nach Ablagenr. funktioniert nicht
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1512
+  [phgross]
+
 - Activate tabbedview quickupload plugin for dossiers.
   Issue #549 Abklaerung: Drag and drop
   https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/549
